--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ body {
   min-height: 100vh;
 }
 
+*::selection {
+  color: white;
+  background-color: black;
+}
+
 #logo img {
   width: 100px;
   height: 100px;
@@ -52,7 +57,7 @@ body {
 
 .headings {
   display: flex;
-  gap: 1.5vw;
+  gap: 1vw;
 }
 
 .headings h1 {
@@ -62,4 +67,162 @@ body {
   line-height: 1;
   color: transparent;
   -webkit-text-stroke: 1px black;
+}
+
+.headings h1:hover {
+  color: black;
+}
+#homelast {
+  padding: 5.5vw 16vw;
+}
+
+#homelast p {
+  width: 70%;
+  font-size: 1.6vw;
+  font-weight: 500;
+  letter-spacing: 0.05vw;
+}
+
+#featured {
+  padding: 10vw 16vw;
+}
+
+.fheading h1 {
+  font-size: 3vw;
+  line-height: 1;
+  font-weight: 500;
+}
+
+.fheading h1:nth-child(2) {
+  color: transparent;
+  -webkit-text-stroke: 1px black;
+}
+
+#fimages {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  justify-content: space-between;
+  margin-top: 2vw;
+}
+
+#fleft {
+  overflow: hidden;
+  width: 45%;
+  height: inherit;
+}
+
+.fleftelem {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: inherit;
+}
+
+.fleftelem h1 {
+  font-size: 2vw;
+  line-height: 1;
+  font-weight: 400;
+  text-transform: capitalize;
+  margin: 2vw 0;
+}
+
+.fleftelem h3 {
+  font-size: 1.2vw;
+  font-weight: 300;
+  margin-bottom: -10px;
+}
+
+.fleftelem h5 {
+  margin-top: -20px;
+  font-size: 1vw;
+  font-weight: 400;
+  opacity: 70%;
+}
+#fright {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 45%;
+  height: inherit;
+}
+
+#fright .images {
+  width: 90%;
+  height: 80%;
+  background-color: blue;
+}
+
+.btn {
+  padding: 2vw 0;
+  display: flex;
+  justify-content: center;
+}
+.btn button {
+  padding: 1.2vw 2.2vw;
+  border-radius: 100px;
+  background-color: white;
+  border: 1px solid gray;
+  text-transform: capitalize;
+}
+
+#dev {
+  padding: 5vw 16vw;
+  display: flex;
+  flex-direction: column;
+  gap: 2vw;
+}
+
+#dev h1 {
+  font-weight: 500;
+  font-size: 3vw;
+  width: 40%;
+}
+
+#dev p {
+  line-height: 1.5;
+  font-size: 1vw;
+  width: 40%;
+}
+
+#slides {
+  display: flex;
+  justify-content: space-between;
+  padding: 5vw 10vw;
+}
+
+#slides .slide {
+  width: 33%;
+}
+
+.slide {
+  display: flex;
+  flex-direction: column;
+  gap: 1vw;
+}
+#slides .img {
+  border-radius: 5px;
+  overflow: hidden;
+  width: 100%;
+  height: 270px;
+  background-color: blue;
+}
+
+.img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#slides .slide h3 {
+  font-size: 1.2vw;
+  font-weight: 500;
+}
+
+#tag {
+  margin: 20px J0;
+  padding: 0.3vw 1vw;
+  background-color: rgb(202, 200, 200);
+  width: fit-content;
+  border-radius: 100px;
 }
