--- a/style.css
+++ b/style.css
@@ -150,10 +150,14 @@ body {
 
 #fright .images {
   width: 90%;
-  height: 80%;
-  background-color: blue;
+  height: 90%;
 }
 
+#fright .images img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .btn {
   padding: 2vw 0;
   display: flex;
@@ -225,4 +229,17 @@ body {
   background-color: rgb(202, 200, 200);
   width: fit-content;
   border-radius: 100px;
+}
+
+#yoyo {
+  padding-bottom: 50px;
+  height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#yoyo h1 {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 10vh;
 }
